modify home page

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -60,7 +60,7 @@ function getCategoryIcon(category: string) {
         <img src="/logo.svg" alt="logo" class="w-8 h-8 logo-spin" />
       </div>
       <h2 class="text-xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-blue-600 to-indigo-600">
-        {websiteName}
+        <a href="/">{websiteName}</a>
       </h2>
     </div>
   </div>
